--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
-    "swiper": "^9.2.0"
+    "swiper": "^9.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
